@@ -1,5 +1,10 @@
 2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gdb/i386/machdep.S: Use VARIABLE and EXT_C instead of
+	hardcoding the relevant info.
+
+2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len): Add
 	missing const qualifiers.
 	* grub-core/gnulib/argp-fmtstream.h (__argp_get_display_len): Likewise.
